<resources>
    <string name="app_name">ToDoList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group">Create Group</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="create_item">Create Item</string>
    <string name="description">Description</string>
    <string name="due">Due</string>
    <string name="date">Date</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="range">Range</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="remind">Remind</string>
    <string name="before">Before</string>
    <string name="minutes">Minutes</string>
    <string name="edit_item">Edit Item</string>
</resources>