<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.todolist.AddItemFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tvCreateItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/create_item"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="@={viewModel.textName}" />

                <EditText
                    android:id="@+id/etItemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/description"
                    android:inputType="text|textMultiLine"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:text="@={viewModel.textDescription}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbDue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedDue}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/due"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnTimeDue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:text="@={viewModel.textDueTime}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                    <Button
                        android:id="@+id/btnDayDue"
                        android:layout_width="36dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="2"
                        android:text="@={viewModel.textDueDate}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbDaily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedDaily}"
                        android:fontFamily="@font/poppins"
                        android:text="@string/daily" />

                    <CheckBox
                        android:id="@+id/cbWeekly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedWeekly}"
                        android:fontFamily="@font/poppins"
                        android:text="@string/weekly" />

                    <CheckBox
                        android:id="@+id/cbMonthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedMonthly}"
                        android:fontFamily="@font/poppins"
                        android:text="@string/monthly" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedItemDate}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/date"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnItemDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="75dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@={viewModel.textItemDate}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRangeStart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cbStartDate"
                        android:layout_width="14dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedRangeStart}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/start_date"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnStartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@={viewModel.textDateStart}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRangeEnd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cbEndDate"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedRangeEnd}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/end_date"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnEndDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@={viewModel.textDateEnd}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llStartTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cbStartTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedItemStart}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/start_time"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnItemStart"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@={viewModel.textItemStart}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cbEndTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedItemEnd}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/end_time"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btnItemEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:elevation="4dp"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:text="@={viewModel.textItemEnd}"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="15dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llRemind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/cbRemind"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedRemind}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="@string/remind"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/etRemind"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/minutes"
                        android:inputType="text"
                        android:maxLength="3"
                        android:text="@={viewModel.textRemind}"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvRemindBefore"
                        android:layout_width=".00000001dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-75dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins"
                        android:gravity="end"
                        android:text="@string/before"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llLocationRemindOptions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cbLocationRemind"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:checked="@={viewModel.checkedLocation}"
                        android:fontFamily="@font/poppins"
                        android:singleLine="true"
                        android:text="Location"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/btnLocationRemind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#007A1818"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:srcCompat="@drawable/baseline_add_24" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvLocationHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:text="Locations here"
                        android:textSize="24sp" />

                    <ScrollView
                        android:id="@+id/svLocationRemind"
                        android:layout_width="match_parent"
                        android:layout_height="150dp">

                        <LinearLayout
                            android:id="@+id/llLocationRemind"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" />
                    </ScrollView>
                </FrameLayout>

                <Button
                    android:id="@+id/btnItemDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/done"
                    android:textSize="18sp"
                    app:cornerRadius="15dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>